# mlvg

./: .gitmodules  CMakeLists.txt  build_test.md
.github/actions/build-madronalib/: action.yml
.github/actions/build-mlvg/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/actions/test-madronalib/: action.yml
.github/actions/test-mlvg/: action.yml
.github/workflows/: build.yml  investigate-runtime-library.yml  investigate-threading.yml
examples/clap-plugin/: CMakeLists.txt
examples/clap-plugin/src/: clap-saw-demo-entry.cpp  clap-saw-demo-gui.cpp
include/: MLPlatform.h
source/common/: MLDrawContext.h  MLFiles.cpp
source/native/: MLFilesLinux.cpp
tests/: filesTest.cpp
